# transfer-text-segments

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
src/transfer-text-segments/: __init__.py
src/transfer_text_segments/: __init__.py  core.py
tests/: test_transfer_text.py
tests/sample/: Marpa-ep1-transcription.tsv  marpa_org.txt  resultTSV_1.tsv  test-transcription_1.tsv  test_extracted_tsv.txt  test_get_original_text.txt
