[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transfer-text-segments"
version = "0.0.1"
authors = [
  { name="Gayche", email="gaychetenzin@gmail.com" }, { name="OpenPecha", email="dev@openpecha.org" }
]
description = "A small package to transfer orginal text on to the segmented text"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
   "antx==0.1.11",
   "certifi==2022.12.7",
   "charset-normalizer==3.1.0",
   "diff-match-patch==20181111",
   "exceptiongroup==1.1.1",
   "idna==3.4",
   "iniconfig==2.0.0",
   "numpy==1.24.3",
   "packaging==23.1",
   "pandas==2.0.1",
   "pluggy==1.0.0",
   "pytest==7.3.1",
   "python-dateutil==2.8.2",
   "pytz==2023.3",
   "PyYAML==5.4.1",
   "regex==2023.3.23",
   "requests==2.28.2",
   "six==1.16.0",
   "tomli==2.0.1",
   "tzdata==2023.3",
   "urllib3==1.26.15"
]
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]
dependencies = [
  "openpecha>=0.8.21",
  "antx>=0.1.4",
  "pandas==2.0.1"

]

[project.urls]
"Homepage" = "https://github.com/OpenPecha/openpecha-project-template"
"Bug Tracker" = "https://github.com/OpenPecha/openpecha-project-template/issues"
