[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transfer-text-segments"
version = "0.0.1"
authors = [
  { name="Gayche", email="gaychetenzin@gmail.com" }, { name="OpenPecha", email="dev@openpecha.org" }
]
description = "A small package to transfer orginal text on to the segmented text"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "antx==0.1.11",
  "pandas==2.0.1",
  "numpy==1.24.3"
]
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]


[project.urls]
"Homepage" = "https://github.com/OpenPecha/openpecha-project-template"
"Bug Tracker" = "https://github.com/OpenPecha/openpecha-project-template/issues"
